@@ -303,37 +303,47 @@ void DumpRenderTree::open()
     }
 }
 
+static void clearHistory(QWebPage* page)
+{
+    // QWebHistory::clear() leaves current page, so remove it as well by setting
+    // max item count to 0, and then setting it back to it's original value.
+
+    QWebHistory* history = page->history();
+    int itemCount = history->maximumItemCount();
+
+    history->clear();
+    history->setMaximumItemCount(0);
+    history->setMaximumItemCount(itemCount);
+}
+
 void DumpRenderTree::resetToConsistentStateBeforeTesting()
 {
-    closeRemainingWindows();
-
-    // Reset so that any current loads are stopped
+    // reset so that any current loads are stopped
+    // NOTE: that this has to be done before the layoutTestController is
+    // reset or we get timeouts for some tests.
     m_page->blockSignals(true);
     m_page->triggerAction(QWebPage::Stop);
     m_page->blockSignals(false);
 
-    m_page->mainFrame()->setZoomFactor(1.0);
+    // reset the layoutTestController at this point, so that we under no
+    // circumstance dump (stop the waitUntilDone timer) during the reset
+    // of the DRT.
+    m_controller->reset();
 
-    // clear leaves current page, so remove it as well by
-    // setting max item count to 0, and then setting it back
-    // to it's original value.
-    QWebHistory* history = m_page->history();
-    history->clear();
-    int itemCount = history->maximumItemCount();
-    history->setMaximumItemCount(0);
-    history->setMaximumItemCount(itemCount);
+    closeRemainingWindows();
 
     static_cast<WebPage*>(m_page)->resetSettings();
+    m_page->undoStack()->clear();
+    m_page->mainFrame()->setZoomFactor(1.0);
+    clearHistory(m_page);
     qt_drt_clearFrameName(m_page->mainFrame());
 
     WorkQueue::shared()->clear();
-    // Causes timeout, why?
+    // The below line is used in other ports, but for us it results in
+    // a timeout for fast/frames/frame-navigation.html
     //WorkQueue::shared()->setFrozen(false);
 
-    m_controller->reset();
     qt_drt_resetOriginAccessWhiteLists();
-
-    m_page->undoStack()->clear();
 
     QLocale::setDefault(QLocale::c());
     setlocale(LC_ALL, "");
